--- a/src/modules/reports/components/IncomeList/IncomeList.module.css
+++ b/src/modules/reports/components/IncomeList/IncomeList.module.css
@@ -8,14 +8,16 @@
     to bottom,
     transparent,
     transparent 143px,
-    #e0e5eb 143px,
-    #e0e5eb 144px
+    #e1e1e1 143px,
+    #e1e1e1 144px
   );
 }
+
 .icon {
   filter: invert(9%) sepia(34%) saturate(3834%) hue-rotate(198deg)
     brightness(90%) contrast(97%);
 }
+
 .item {
   display: flex;
   flex-wrap: wrap;
@@ -23,14 +25,18 @@
 
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 
-  background-image: url('../../../../images/icons/category/background/normal.svg');
+  /* background-image: url('../../../../images/'); */
   background-repeat: no-repeat;
   background-position: 50% 55%;
 }
+
 .item:hover {
-  background-image: url('../../../../images/icons/category/background/onHover.svg');
+  /* background-image: url('../../../../images/icons/category/background/onHover.svg'); */
 }
+
 .item:hover .icon {
   filter: invert(71%) sepia(65%) saturate(5152%) hue-rotate(345deg)
     brightness(99%) contrast(104%);
