--- a/src/css/App.css
+++ b/src/css/App.css
@@ -119,6 +119,8 @@ ul {
 @media screen and (min-width: 1280px) {
   /* desktop */
   .container {
-    max-width: 1090px;
+    padding-left: 87px;
+    padding-right: 110px;
+    max-width: 1280px;
   }
 }
