--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -123,16 +123,12 @@
   }
 
   .description {
+    border: 2px solid #f5f6fb;
+    border-radius: 16px 0 0 0;
+    border-right: none;
     width: 181px;
+    padding: 0 20px;
     height: 44px;
-    border-top-left-radius: 16px;
-    font-size: 12px;
-    line-height: 14px;
-    text-align: start;
-    background-color: transparent;
-    padding-left: 30px;
-    border: 2px solid #52555f;
-    color: #52555f;
   }
 
   .dateWrapper {
@@ -160,6 +156,91 @@ outline: red;
     padding: 9px 12px 11px 0;
     width: 35px;
   }
+  .dateWrapper {
+    position: relative;
+  }
+
+  .calendarIcon {
+    position: absolute;
+    z-index: 2;
+    left: -2px;
+    top: 12px;
+  }
+
+  .datePicker {
+    font-weight: 900;
+    font-size: 12px;
+    line-height: 14px;
+    color: #2e2f30;
+    background-color: transparent;
+    border: none;
+    width: 110px;
+    height: 44px;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+    z-index: 9;
+  }
+
+  .datePicker:focus {
+    outline-color: transparent;
+  }
+
+  .datePicker::-webkit-calendar-picker-indicator {
+    color: rgba(0, 0, 0, 0);
+    z-index: 9;
+    width: 110px;
+    height: 44px;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    cursor: pointer;
+  }
+
+  .btnInput {
+    width: 130px;
+    height: 44px;
+    background: #ff751d;
+    border: none;
+    border-radius: 16px;
+    margin-right: 15px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+
+    color: #fff;
+    box-shadow: 8px 2px 22px 0px rgba(0, 0, 0, 0.38);
+    cursor: pointer;
+  }
+
+  .btnClear {
+    width: 130px;
+    height: 44px;
+    background-color: transparent;
+    border: 2px solid #f6f7fc;
+    border-radius: 16px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+
+    color: #2e2f30;
+    box-shadow: 2px 2px 22px 0px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
+
+  .buttonWrap {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    margin-top: 32px;
+  }
 }
 
 @media screen and (max-width: 778px) {
@@ -169,31 +250,31 @@ outline: red;
     } */
 }
 
-.containerForm {
+/* .containerForm {
   padding-top: 32px;
-}
+} */
 
-.product {
+/* .product {
   border: 2px solid #f6f7fc;
   width: 288px;
   height: 38px;
   border-radius: 16px 0px 0px 0px;
-}
-
+} */
+/* 
 .description::placeholder {
   font-weight: 400;
   color: #c7ccdc;
-}
+} */
 
-.select {
+/* .select {
   width: 280px;
   height: 44px;
   border: 2px solid #fff;
   border-bottom-right-radius: 16px;
   color: #c7ccdc;
-}
+} */
 
-.text {
+/* .text {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
@@ -202,24 +283,24 @@ outline: red;
   letter-spacing: 0.02em;
   padding-left: 20px;
   color: #c7ccdc;
-}
+} */
 
-.svg {
+/* .svg {
   position: relative;
   right: 35px;
   bottom: -4px;
-}
+} */
 
-.inputCountWrapper {
+/* .inputCountWrapper {
   position: relative;
   width: 183px;
-}
+} */
 
-.calculatorIcon {
+/* .calculatorIcon {
   position: absolute;
   right: 30px;
   top: 44px;
-}
+} */
 
 /* .inputCount {
   width: 183px;
@@ -237,14 +318,14 @@ outline: red;
   color: #52555f;
 } */
 
-.inputCount::placeholder {
+/* .inputCount::placeholder {
   color: #000;
-}
+} */
 
-.btnWrapper {
+/* .btnWrapper {
   display: flex;
   align-items: center;
-}
+} */
 
 @media screen and (min-width: 1280px) {
   .blockButton {
@@ -303,99 +384,13 @@ outline: red;
     width: auto;
   }
 }
-
+/* 
 @media screen and (max-width: 768px) {
   .btnWrapper {
     align-items: center;
     justify-content: center;
   }
-}
-
-.dateWrapper {
-  position: relative;
-}
-
-.calendarIcon {
-  position: absolute;
-  z-index: 2;
-  left: -2px;
-  top: 12px;
-}
-
-.datePicker {
-  font-weight: 900;
-  font-size: 12px;
-  line-height: 14px;
-  color: #2e2f30;
-  background-color: transparent;
-  border: none;
-  width: 110px;
-  height: 44px;
-  margin: 0 auto;
-  text-align: center;
-  position: relative;
-  z-index: 9;
-}
-
-.datePicker:focus {
-  outline-color: transparent;
-}
-
-.datePicker::-webkit-calendar-picker-indicator {
-  color: rgba(0, 0, 0, 0);
-  z-index: 9;
-  width: 110px;
-  height: 44px;
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  cursor: pointer;
-}
-
-.btnInput {
-  width: 130px;
-  height: 44px;
-  background: #ff751d;
-  border: none;
-  border-radius: 16px;
-  margin-right: 15px;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 14px;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: uppercase;
-
-  color: #fff;
-  box-shadow: 8px 2px 22px 0px rgba(0, 0, 0, 0.38);
-  cursor: pointer;
-}
-
-.btnClear {
-  width: 130px;
-  height: 44px;
-  background-color: transparent;
-  border: 2px solid #f6f7fc;
-  border-radius: 16px;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 14px;
-  text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: uppercase;
-
-  color: #2e2f30;
-  box-shadow: 2px 2px 22px 0px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-
-.buttonWrap {
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  margin-top: 32px;
-}
+} */
 
 /*
 @media screen and (min-width: 768px) {
