--- a/src/css/App.css
+++ b/src/css/App.css
@@ -34,8 +34,8 @@ ul {
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
+  /*  padding-left: 20px;
+  padding-right: 20px; */
 }
 /* .authBlock {
   position: relative;
@@ -100,7 +100,7 @@ ul {
   }
 
   .background-top_for-mobile {
-    height: 330px;
+    height: 400px;
   }
 
   .home-mob-wrap {
