--- a/src/modules/Buttons/ButtonGoMain/buttonGoMain.module.css
+++ b/src/modules/Buttons/ButtonGoMain/buttonGoMain.module.css
@@ -2,7 +2,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  margin-top: 16px;
+  padding: 20px 30px;
 }
 
 .buttonGoBack {
@@ -17,10 +17,9 @@
   visibility: hidden;
 }
 
-@media screen and (min-width: 772px) {
-  .buttonText {
-    visibility: visible;
-    color: #52555f;
-    margin-left: 15px;
+@media screen and (min-width: 768px) {
+  .buttonLink {
+    padding: 0;
+    margin-top: 16px;
   }
 }
