--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -118,8 +118,9 @@
     border-radius: 0;
     border-right: none;
     margin: 0;
-    /* padding: 13px 10px px; */
+    padding: 13px 10px;
     width: 80px;
+    height: 44px;
   }
 
   .description {
