--- a/src/modules/dropDownCategories/Dropdown.module.css
+++ b/src/modules/dropDownCategories/Dropdown.module.css
@@ -54,3 +54,45 @@
   background-color: #f5f6fb;
   color: #52555f;
 }
+@media screen and (min-width: 768px) {
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    height: 44px;
+    border: 2px solid #f5f6fb;
+  }
+  .dropdownItem {
+    /* color: inherit; */
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.02em;
+
+    color: #c7ccdc;
+  }
+
+  .dropdownItem:hover {
+    background-color: #f5f6fb;
+    color: #52555f;
+  }
+  .dropbtn {
+    /* display: none; */
+
+    align-items: center;
+    justify-content: space-between;
+    width: 170px;
+    height: 40px;
+    background-color: white;
+    color: white;
+    padding: 2px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+    line-height: 14px;
+    color: #c7ccdc;
+  }
+}
