--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -6,11 +6,11 @@
   width: 100%;
 }
 
-.description {
-  /* display: none;  */
+/* .description { */
+/* display: none;  */
 
-  /* height: 44px; */
-  /* border-top-left-radius: 16px;
+/* height: 44px; */
+/* border-top-left-radius: 16px;
   font-size: 12px;
   line-height: 14px;
   text-align: start;
@@ -18,7 +18,7 @@
   padding-left: 30px;
   border: 2px solid #52555f;
   color: #52555f; */
-}
+/* } */
 
 .inputCount {
   /* display: none; */
