--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -9,8 +9,15 @@
 
 @media screen and (max-width: 767px) {
   .table {
-    width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+    /* margin-bottom: 160px; */
+
+    width: 100%;
+    max-width: 300px;
   }
+
   .tableHeaderTitle {
     display: none;
   }
@@ -32,7 +39,6 @@
     font-weight: 700;
     font-size: 12px;
     line-height: 14px;
-
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: uppercase;
@@ -41,7 +47,9 @@
   }
 
   .tableHeaderTitle {
-    width: 20%;
+    /* !!!! */
+    width: 25%;
+
     height: 38px;
     padding: 5px;
 
@@ -84,7 +92,8 @@
   }
 
   .tableBody tr td:nth-child(2) {
-    max-width: 110px;
+    width: 27%;
+    max-width: 50px;
   }
 
   .tableBody::-webkit-scrollbar {
@@ -112,6 +121,18 @@
     max-width: 746px;
   }
 
+  .tableHeaderTitle {
+    width: 20%;
+  }
+
+  .tableHeaderTitle:first-child {
+    width: 15%;
+  }
+
+  .tableHeaderTitle:nth-child(2) {
+    width: 25%;
+  }
+
   .tableBody {
     width: 746px;
     height: calc(38px * 9 + 1px * 9);
@@ -120,8 +141,13 @@
   .tableBody tr {
     height: 38px;
   }
-  /* 
+
   .tableBody tr td:nth-child(2) {
-    max-width: 110px;
-  } */
+    width: 25%;
+    max-width: 120px;
+  }
+
+  .tableBody tr td:first-child {
+    width: 15%;
+  }
 }
