--- a/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
+++ b/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
@@ -13,6 +13,12 @@
   margin-right: 5px;
 }
 
+.tableDataDescription {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .tableDataSum {
   font-size: 12px;
   font-weight: 700;
@@ -28,13 +34,15 @@
 @media screen and (max-width: 767px) {
   .tableRow {
     position: relative;
-
-    width: 280px;
   }
 
   .tableRow td:not(:nth-child(2)) {
     padding-top: 15px;
     padding-bottom: 10px;
+  }
+
+  .tableDataDescription {
+    max-width: 50%;
   }
 
   .tableDataDate {
@@ -45,7 +53,7 @@
     position: absolute;
     top: 15%;
     left: 0;
-    padding: 0;
+
     font-size: 12px;
     font-weight: 700;
   }
@@ -75,7 +83,7 @@
   }
 
   .tableRow td {
-    width: 20%;
+    width: 25%;
   }
 
   .tableDataDate {
@@ -84,13 +92,11 @@
   }
 
   .tableDataDescription {
-    width: 168px;
+    width: 27%;
+    max-width: 50px;
     padding-left: 5px;
 
     text-align: left;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
   }
 
   .button {
@@ -103,5 +109,11 @@
     border-radius: 50%;
     background-color: #f5f6fb;
     cursor: pointer;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .tableRow td {
+    width: 20%;
   }
 }
