--- a/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
+++ b/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
@@ -41,10 +41,6 @@
     padding-bottom: 10px;
   }
 
-  .tableDataDescription {
-    max-width: 50%;
-  }
-
   .tableDataDate {
     vertical-align: bottom;
   }
@@ -53,6 +49,7 @@
     position: absolute;
     top: 15%;
     left: 0;
+    max-width: 50%;
 
     font-size: 12px;
     font-weight: 700;
@@ -60,7 +57,7 @@
 
   .tableDataCategory {
     vertical-align: bottom;
-    width: 82px;
+    width: 50%;
   }
 
   .tableDataSum {
