--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -12,7 +12,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 150px;
-    /* margin-bottom: 160px; */
+    margin-bottom: 50px;
 
     width: 100%;
     max-width: 350px;
