add tooltip to chart

--- a/src/modules/reports/components/ReportChart/ReportChart.module.css
+++ b/src/modules/reports/components/ReportChart/ReportChart.module.css
@@ -31,3 +31,15 @@
   margin-right: auto;
   background-color: #ffffff;
 }
+
+.customTooltip {
+  border: none;
+  background-color: transparent;
+}
+.customTooltipLabel {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #000000;
+}
