fixed arrow in input TransactionForm

--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -28,6 +28,11 @@
   color: #52555f;
 }
 
+.inputCount::-webkit-outer-spin-button,
+.inputCount::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .inputCount::placeholder {
   font-weight: 400;
   font-size: 12px;
