--- a/src/modules/reports/components/ReportsList/ReportsList.module.css
+++ b/src/modules/reports/components/ReportsList/ReportsList.module.css
@@ -13,6 +13,9 @@
   );
 }
 .icon {
+  margin-top: 10px;
+  margin-bottom: 10px;
+
   filter: invert(9%) sepia(34%) saturate(3834%) hue-rotate(198deg)
     brightness(90%) contrast(97%);
 }
@@ -34,6 +37,10 @@
 .item:hover .icon {
   filter: invert(71%) sepia(65%) saturate(5152%) hue-rotate(345deg)
     brightness(99%) contrast(104%);
+}
+.noData {
+  color: #52555f;
+  font-size: 20px;
 }
 
 @media screen and (min-width: 768px) {
