--- a/src/modules/reports/components/ReportsSlider/ReportsSlider.module.css
+++ b/src/modules/reports/components/ReportsSlider/ReportsSlider.module.css
@@ -23,5 +23,10 @@
   color: #000000;
 }
 .arrow {
-  text-decoration: none;
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
 }
