--- a/src/modules/reports/components/ReportChart/ReportChart.module.css
+++ b/src/modules/reports/components/ReportChart/ReportChart.module.css
@@ -7,22 +7,55 @@
 
 @media screen and (min-width: 768px) {
   .chartView {
-    padding: 20px 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 32px;
+    margin-bottom: 80px;
+    padding: 20px 50px;
+    width: 604px;
+    overflow: auto;
+  }
+  .chart {
+    width: 704px;
+    margin-left: 40px;
+  }
+
+  .chartView::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+
+  .chartView::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
+  }
+
+  .chartView::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-image: -webkit-gradient(
+      linear,
+      right top,
+      left bottom,
+      color-stop(0.44, rgb(255, 218, 192)),
+      color-stop(0.72, rgb(255, 167, 102)),
+      color-stop(0.86, rgb(255, 117, 29))
+    );
   }
 }
 
 @media screen and (min-width: 1280px) {
   .chartView {
-    padding: 20px 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    padding: 20px 138px;
+    width: 758px;
   }
-}
-
-.chartResponsiveContainer {
-  margin: 0 auto;
-}
-
-.chart {
-  margin: 0 auto;
+  .chart {
+    width: 1034px;
+    margin: 0 auto;
+  }
 }
 
 .chartMobileWrapper {
