--- a/src/modules/reports/components/ReportChart/ReportChart.module.css
+++ b/src/modules/reports/components/ReportChart/ReportChart.module.css
@@ -21,7 +21,7 @@
   }
 
   .chartView::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
     border-radius: 10px;
   }
@@ -59,6 +59,8 @@
 }
 
 .chartMobileWrapper {
+  margin-top: 12px;
+  margin-bottom: 52px;
   width: 280px;
   margin-left: auto;
   margin-right: auto;
