--- a/src/modules/dropDownCategories/Dropdown.module.css
+++ b/src/modules/dropDownCategories/Dropdown.module.css
@@ -64,3 +64,24 @@
     background: #f5f6fb;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .dropbtn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 170px;
+    height: 47px;
+    background-color: white;
+    color: white;
+    padding: 2px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+    line-height: 14px;
+    color: #c7ccdc;
+    border: 2px solid #f5f6fb;
+  }
+}
