--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -26,6 +26,7 @@
   margin-top: 32px;
   background-color: transparent;
   color: #52555f;
+  outline: none;
 }
 
 .inputCount::-webkit-outer-spin-button,
@@ -106,17 +107,6 @@
     right: -79px;
     bottom: 31px;
   }
-  .inputCountOverlay {
-    /* border-left: none;
-      border-radius: 0;
-      border-left: none;
-      border-right: none;
-      margin: 0;
-      border: 2px solid #f5f6fb; */
-    /* padding: 13px 10px px; */
-    /* width: 80px;
-        height: 44px; */
-  }
 
   .inputCount::placeholder {
     color: #c7ccdc;
@@ -140,6 +130,7 @@
     width: 181px;
     padding: 0 20px;
     height: 44px;
+    outline: none;
   }
 
   .dateWrapper {
@@ -216,10 +207,7 @@
   font-weight: 400;
   color: #c7ccdc;
 }
-/* .inputCount::placeholder{
-  font-weight: 400;
-  color: #c7ccdc;
-} */
+
 .select {
   width: 280px;
   height: 44px;
@@ -255,22 +243,6 @@
   right: 30px;
   top: 44px;
 }
-
-/* .inputCount {
-  width: 183px;
-  height: 44px;
-  border: 2px solid #fff;
-  padding-right: 55px;
-  padding-left: 55px;
-  border-radius: 22px;
-  font-weight: 900;
-  font-size: 12px;
-  line-height: 14px;
-  text-align: center;
-  margin-top: 32px;
-  background-color: transparent;
-  color: #52555f;
-} */
 
 .inputCount::placeholder {
   color: #000;
@@ -456,218 +428,6 @@ btnClear:focus {
   cursor: pointer;
 }
 
-/*
-@media screen and (min-width: 768px) {
-  .wrap {
-    width: 100%;
-    margin: 0 auto;
-    width: 624px;
-    height: 44px;
-  }
-
-  .wrapInput {
-    display: flex;
-    align-items: center;
-  }
-
-  .dateWrapper {
-    position: relative;
-  }
-
-  .calendarIcon {
-    position: absolute;
-    z-index: 2;
-    left: -5px;
-    top: 2px;
-    cursor: pointer;
-  }
-
-  .datePicker {
-    font-weight: 900;
-    font-size: 12px;
-    line-height: 14px;
-    color: #52555f;
-    background-color: transparent;
-    border: none;
-    width: 90px;
-    height: 100%;
-    margin-right: 44px;
-    text-align: end;
-    position: relative;
-    z-index: 9;
-  }
-
-  .datePicker:focus {
-    outline-color: transparent;
-  }
-
-  .datePicker::-webkit-calendar-picker-indicator {
-    color: rgba(0, 0, 0, 0);
-    z-index: 9;
-    width: 90px;
-    height: 100%;
-    opacity: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    cursor: pointer;
-  }
-
-  .description {
-    width: 184px;
-    height: 44px;
-    border: 2px solid #f5f6fb;
-    border-top-left-radius: 16px;
-    font-size: 12px;
-    line-height: 14px;
-    padding-left: 19px;
-    background-color: transparent;
-    color: #52555f;
-  }
-
-  .description::placeholder {
-    color: #c7ccdc;
-  }
-
-  .select {
-    width: 184px;
-    height: 44px;
-    margin-bottom: 0;
-    border: 2px solid #f5f6fb;
-  }
-
-  .inputCountWrapper {
-    position: relative;
-    width: 110px;
-  }
-
-  .calculatorIcon {
-    position: absolute;
-    right: 16px;
-    top: 12px;
-  }
-
-  .inputCount {
-    width: 110px;
-    height: 44px;
-    padding-right: 45px;
-    padding-left: 10px;
-    border: 2px solid #f5f6fb;
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
-    font-weight: 900;
-    font-size: 12px;
-    line-height: 14px;
-    text-align: center;
-    background-color: transparent;
-
-    color: #52555f;
-  }
-
-  .btnInput {
-    width: 125px;
-    height: 44px;
-    background: #ff751d;
-    border: none;
-    border-radius: 16px;
-    margin-right: 15px;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 14px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-
-    color: #fff;
-    box-shadow: 2px 2px 22px 0px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-  }
-
-  .btnClear {
-    width: 125px;
-    height: 44px;
-    background-color: transparent;
-
-    border: 2px solid #f6f7fc;
-    border-radius: 16px;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 14px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-
-    color: #2e2f30;
-    box-shadow: 2px 2px 22px 0px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-  }
-  .buttonWrap {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    margin-top: 32px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .wrap {
-    width: 1120px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 0;
-  }
-
-  .wrapInput {
-    display: flex;
-    align-items: center;
-  }
-  .datePicker {
-    width: 104px;
-    text-align: center;
-  }
-
-  .description {
-    width: 238px;
-  }
-  .select {
-    width: 169px;
-  }
-
-  .inputCountWrapper {
-    position: relative;
-    width: 121px;
-  }
-
-  .calculatorIcon {
-    position: absolute;
-    right: 17px;
-    top: 12px;
-  }
-
-  .inputCount {
-    width: 121px;
-  }
-
-  .btnInput {
-    width: 136px;
-  }
-
-  .btnClear {
-    width: 136px;
-  }
-  .buttonWrap {
-    margin-left: 32px;
-    margin-top: 0;
-  }
-
-  .inputWrap {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-  }
-} */
-
 @media screen and (max-width: 767px) {
   .wrap {
     padding-left: 20px;
@@ -715,6 +475,7 @@ btnClear:focus {
     border-top-right-radius: 25px;
     padding-left: 20px;
     background: #f5f6fb;
+    outline: none;
   }
   .calculator {
     width: 30px;
