--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -44,7 +44,7 @@
   }
 
   .container {
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #fff;
     border-radius: 0 30px 30px 30px;
     box-shadow: 0 10px 60px rgb(170 178 197 / 20%);
@@ -73,7 +73,7 @@
   .container {
     /* display: flex; */
     width: 1034px;
-    height: 100vh;
+    /* height: 100vh; */
     /* background-color: #fff;
     border-radius: 0 30px 30px 30px;
     box-shadow: 0 10px 60px rgb(170 178 197 / 20%);
