Revert "Bugfix/home page mobile"

--- a/src/modules/reports/components/ReportChart/ReportChart.module.css
+++ b/src/modules/reports/components/ReportChart/ReportChart.module.css
@@ -11,11 +11,13 @@
     margin-right: auto;
     margin-top: 32px;
     margin-bottom: 80px;
-    padding: 5px 35px;
-    overflow-x: auto;
+    padding: 20px 50px;
+    width: 604px;
+    overflow: auto;
   }
   .chart {
-    margin-left: 0px;
+    width: 704px;
+    margin-left: 40px;
   }
 
   .chartView::-webkit-scrollbar-track {
@@ -47,9 +49,11 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
-    padding: 5px 138px;
+    padding: 20px 138px;
+    width: 758px;
   }
   .chart {
+    width: 1034px;
     margin: 0 auto;
   }
 }
@@ -64,9 +68,6 @@
 }
 
 .customTooltip {
-  display: block;
-  width: 150px;
-  word-wrap: break-word;
   border: none;
   background-color: transparent;
 }
