--- a/src/modules/dropDownCategories/Dropdown.module.css
+++ b/src/modules/dropDownCategories/Dropdown.module.css
@@ -28,6 +28,7 @@
 }
 
 .dropdownContent {
+  margin-top: 0;
   padding: 0;
   position: absolute;
   background-color: white;
@@ -77,6 +78,7 @@
     padding: 2px 20px;
     border: none;
     cursor: pointer;
+    font-family: Roboto;
     font-size: 12px;
     font-weight: 400;
     letter-spacing: 0.02em;
