--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -477,6 +477,9 @@ btnClear:focus {
   }
 
   .description {
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 12px;
     box-sizing: border-box;
     width: 280px;
     height: 44px;
