--- a/src/modules/dropDownCategories/Dropdown.module.css
+++ b/src/modules/dropDownCategories/Dropdown.module.css
@@ -10,6 +10,8 @@
   border: none;
   cursor: pointer;
   font-size: 12px;
+  font-family: Roboto;
+
   font-weight: 400;
   letter-spacing: 0.02em;
   line-height: 14px;
