--- a/src/modules/dropDownCategories/Dropdown.module.css
+++ b/src/modules/dropDownCategories/Dropdown.module.css
@@ -30,11 +30,12 @@
 }
 
 .dropdownContent {
+  width: 100%;
   margin-top: 0;
   padding: 0;
   position: absolute;
   background-color: white;
-  min-width: 170px;
+  /* min-width: 170px; */
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
