--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -81,8 +81,9 @@
 
 @media screen and (min-width: 1280px) {
   .container {
+    max-width: 1280px;
     /* display: flex; */
-    width: 1034px;
+    /* width: 1034px; */
     /* height: 100vh; */
     /* background-color: #fff;
     border-radius: 0 30px 30px 30px;
