--- a/src/Views/AuthPage/AuthPage.module.css
+++ b/src/Views/AuthPage/AuthPage.module.css
@@ -1,6 +1,17 @@
 .authBlock {
   position: relative;
 }
+.backgroundTop {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  width: 100%;
+  height: 583px;
+  /*check*/
+  background-color: #f5f6fb;
+  border-bottom-left-radius: 120px;
+}
 .container {
   display: flex;
   justify-content: center;
