--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -1,18 +1,3 @@
-/* .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center; */
-/* height: 100vh; */
-/* justify-content: flex-end; */
-/* margin-top: auto; */
-
-/* background: #ffffff; */
-/* shadow 1 */
-/* 
-  box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
-  border-radius: 0px 30px 30px 30px; */
-/* } */
-
 .rel {
   position: relative;
 }
@@ -33,35 +18,67 @@
   display: none;
 }
 
+.dateWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.datePicker {
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 14px;
+  color: #52555f;
+  background-color: transparent;
+  border: none;
+  position: relative;
+  z-index: 1;
+}
+.datePicker:focus {
+  outline-color: transparent;
+}
+
+.datePicker::-webkit-calendar-picker-indicator {
+  color: rgba(0, 0, 0, 0);
+  z-index: 9;
+  width: 90px;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  cursor: pointer;
+}
+.calendarIcon {
+  position: absolute;
+  z-index: 2;
+  left: 67px;
+  top: -2px;
+}
+
 @media screen and (min-width: 768px) {
-  /* .rel{
-    position:unset ;
-  } */
   .balanceBlock {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 60px;
   }
 
   .container {
-    /* height: 100vh; */
-
     background-color: #fff;
     border-radius: 0 30px 30px 30px;
     box-shadow: 0 10px 60px rgb(170 178 197 / 20%);
-    padding: 28px 30px 48px 31px;
+    padding: 24px 40px 42px 40px;
   }
-
-  /* .stats {
-    margin-top: 48px;
-  } */
 
   .ab {
     position: relative;
 
     align-items: center;
     height: 40px;
-    /* margin: 58px auto 0; */
     z-index: inherit;
   }
 }
@@ -82,16 +99,14 @@
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
-    /* display: flex; */
-    /* width: 1034px; */
-    /* height: 100vh; */
-    /* background-color: #fff;
-    border-radius: 0 30px 30px 30px;
-    box-shadow: 0 10px 60px rgb(170 178 197 / 20%);
-    padding: 28px 30px 48px 31px; */
+    padding: 32px 32px 61px 32px;
   }
 
   .overlaySummery {
     display: flex;
+  }
+  .balanceBlock {
+    margin-top: 40px;
+    margin-bottom: 8px;
   }
 }
