--- a/src/modules/SecondPage/Summary/Summary.module.css
+++ b/src/modules/SecondPage/Summary/Summary.module.css
@@ -31,6 +31,10 @@
     padding-top: 12px;
     border-bottom: 2px solid #fff;
   }
+  .list {
+    margin: 0;
+    padding: 0;
+  }
   .item {
     justify-content: space-between;
     padding: 12px 20px 12px 22px;
@@ -54,5 +58,8 @@
     width: 213px;
     margin-top: 60px;
     margin-left: 75px;
+  }
+  .item {
+    padding: 12px;
   }
 }
