--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -8,7 +8,7 @@
 .calendarIcon {
   position: absolute;
   z-index: 2;
-  left: -15px;
+  left: -4px;
   top: 12px;
 }
 
@@ -66,7 +66,6 @@
 .calendarIcon {
   height: 17px;
   width: 20px;
-  margin-right: 8px;
   cursor: pointer;
 }
 
@@ -145,14 +144,13 @@
   }
 
   .dateWrapper {
+    position: relative;
     display: block;
-    margin-right: 10px;
-    /* flex-direction: row-reverse; */
+    margin-right: 44px;
   }
 
   .wrapInput {
     display: flex;
-    /* align-items: center; */
     flex-direction: column;
   }
 
@@ -268,22 +266,21 @@
   .blockButton {
     display: flex;
     align-items: center;
-    /* justify-content: baseline; */
   }
 
   .wrap {
-    width: 1120px;
+    width: 100%;
     display: flex;
+    justify-content: flex-end;
     flex-direction: row;
     flex-wrap: nowrap;
     padding: 0;
-    margin-top: 32px;
   }
 
   .wrapInput {
     display: flex;
     align-items: center;
-    margin-right: 32px;
+    /* margin-right: 32px; */
   }
 
   .datePicker {
@@ -292,7 +289,7 @@
   }
 
   .description {
-    width: 238px;
+    width: 250px;
     border: 2px solid #f6f7fc;
     outline: none;
   }
@@ -304,28 +301,24 @@
 
   .inputCount {
     width: 121px;
-    /* border: 2px solid #f6f7fc; */
-    /* border-radius: 0px 16px 16px 0px; */
-    height: 42px;
+    height: 44px;
     outline: none;
   }
 
-  /* .btnInput {
-    width: 136px;
-  } */
+  .dateWrapper {
+    margin-right: 32px;
+    position: relative;
+  }
 
   .btnClear {
     width: 136px;
   }
 
-  /* .buttonWrap {
-    margin-left: 32px;
-    margin-top: 0;
-  } */
   .buttonWrap {
     display: flex;
     justify-content: center;
     margin: 0;
+    margin-left: 32px;
   }
 
   .inputWrap {
@@ -343,17 +336,6 @@
     align-items: center;
     justify-content: center;
   }
-  /* .calendarIcon {
-    position: absolute;
-    z-index: 2;
-    left: -2px;
-    top: 12px;
-  } */
-}
-
-.dateWrapper {
-  margin-right: 10px;
-  position: relative;
 }
 
 .datePicker {
@@ -390,7 +372,7 @@
 }
 
 .btnInput {
-  width: 130px;
+  width: 136px;
   height: 44px;
   background-color: transparent;
   border: none;
@@ -401,7 +383,7 @@
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  margin-right: 15px;
+  margin-right: 16px;
   color: #2e2f30;
   box-shadow: 2px 2px 22px 0px rgba(0, 0, 0, 0.2);
   cursor: pointer;
@@ -443,6 +425,7 @@ btnClear:focus {
 
 @media screen and (max-width: 767px) {
   .wrap {
+    margin-top: -20px;
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
@@ -462,10 +445,6 @@ btnClear:focus {
     flex-direction: column;
   }
 
-  .dateWrapper {
-    width: 150px;
-    margin-bottom: 30px;
-  }
   .datePicker {
     font-size: 15px;
     font-weight: 700;
@@ -475,7 +454,7 @@ btnClear:focus {
     width: 30px;
     height: 30px;
     margin: auto 0;
-    left: -12px;
+    left: -4px;
     top: 7px;
   }
 
@@ -509,6 +488,10 @@ btnClear:focus {
   }
 
   .buttonWrap {
-    margin-top: 70px;
+    display: flex;
+    margin-top: 80px;
+  }
+  .btnInput {
+    margin-right: 20px;
   }
 }
