--- a/src/modules/Buttons/ButtonGoMain/buttonGoMain.module.css
+++ b/src/modules/Buttons/ButtonGoMain/buttonGoMain.module.css
@@ -2,7 +2,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  padding: 20px 30px;
+  padding: 20px 30px 20px 0;
 }
 
 .buttonGoBack {
@@ -20,6 +20,18 @@
 @media screen and (min-width: 768px) {
   .buttonLink {
     padding: 0;
-    margin-top: 16px;
+    margin-top: 40px;
+  }
+  .buttonText {
+    visibility: visible;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    margin-left: 15px;
+
+    letter-spacing: 0.04em;
+
+    color: rgba(82, 85, 95, 0.7);
   }
 }
