--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -11,11 +11,13 @@
   .table {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 150px;
-    margin-bottom: 50px;
+    margin-top: 65px;
+    margin-bottom: 12px;
 
     width: 100%;
-    max-width: 350px;
+    max-width: 280px;
+    max-height: 560px;
+    overflow-y: scroll;
   }
 
   .tableHeaderTitle {
