add cursor pointer

--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -55,7 +55,8 @@
   background-color: transparent;
   border: none;
   position: relative;
-  padding: 20px;
+  padding: 20px 40px;
+  cursor: pointer;
 }
 .dateButtonText {
   font-weight: 700;
@@ -66,7 +67,7 @@
 .calendarIcon {
   position: absolute;
   z-index: 2;
-  left: -8px;
+  left: 12px;
   top: 20px;
 }
 
