add fix height mobile home page

--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -162,6 +162,13 @@
 }
 
 @media screen and (max-width: 767px) {
+  .tableBody {
+    display: inline-block;
+    width: 100%;
+    height: 150px;
+
+    overflow-y: scroll;
+  }
   .emptyRows {
     display: none;
   }
