--- a/src/Views/HomePage/HomePage.module.css
+++ b/src/Views/HomePage/HomePage.module.css
@@ -59,6 +59,14 @@
 }
 
 @media screen and (min-width: 768px) {
+  .summary {
+    display: none;
+  }
+
+  .sammaryTablet {
+    display: inline-block;
+  }
+
   .balanceBlock {
     display: flex;
     flex-direction: row-reverse;
@@ -104,6 +112,12 @@
 
   .overlaySummery {
     display: flex;
+  }
+  .summary {
+    display: block;
+  }
+  .sammaryTablet {
+    display: none;
   }
   .balanceBlock {
     margin-top: 40px;
