--- a/src/modules/reports/components/ReportChart/ReportChart.module.css
+++ b/src/modules/reports/components/ReportChart/ReportChart.module.css
@@ -5,6 +5,10 @@
   border-radius: 30px;
 }
 
+.labelTextWrap {
+  width: 60px;
+}
+
 @media screen and (min-width: 768px) {
   .chartView {
     margin-left: auto;
@@ -55,7 +59,7 @@
 }
 
 .chartMobileWrapper {
-  margin-top: 12px;
+  margin-top: 0px;
   margin-bottom: 52px;
   width: 280px;
   margin-left: auto;
