--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -12,6 +12,24 @@
   top: 12px;
 }
 
+
+
+.iconCalculator {
+  height: 44px;
+
+  display: block;
+  border-radius: 0 22px 22px 0;
+  margin-left: auto;
+  margin-right: auto;
+
+  position: relative;
+  width: 35px;
+  border: 2px solid #fff;
+  border-left: none;
+}
+
+
+
 .inputCountOverlay {
   display: flex;
   align-items: center;
@@ -19,12 +37,12 @@
 
 .inputCount {
   /* display: none; */
-
+  width: 120px;
   height: 44px;
   border: 2px solid #fff;
   /* padding-right: 55px; */
   /* padding-left: 55px; */
-  border-radius: 22px;
+  border-radius: 22px 0 0 22px;
   font-weight: 900;
   font-size: 12px;
   line-height: 14px;
@@ -124,8 +142,7 @@
     border-left: none;
     border-right: none;
     margin: 0;
-
-    width: 80px;
+    width: 70px;
     height: 44px;
   }
 
@@ -176,7 +193,7 @@
   }
   .iconCalculator {
     height: 44px;
-
+  
     display: block;
     border-radius: 0 16px 16px 0;
     margin-left: auto;
@@ -190,7 +207,7 @@
   .calculator {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 20%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
   }
@@ -291,7 +308,6 @@
 
   .description {
     width: 250px;
-    border: 2px solid #f6f7fc;
     outline: none;
   }
 
@@ -301,7 +317,7 @@
   }
 
   .inputCount {
-    width: 121px;
+    width: 100px;
     height: 44px;
     outline: none;
   }
@@ -426,6 +442,10 @@ btnClear:focus {
 }
 
 @media screen and (max-width: 767px) {
+ .iconCalculator{
+    margin-top: 32px;
+ }
+
   .wrap {
     margin-top: -20px;
     padding-left: 20px;
@@ -483,10 +503,8 @@ btnClear:focus {
     letter-spacing: 0.02em;
   }
   .calculator {
-    width: 30px;
-    height: 30px;
-    margin-left: 15px;
-    margin-top: 30px;
+    margin-left: 5px;
+    margin-top: 12px;
   }
 
   .buttonWrap {
