bugfix/transaction-table-mobile

--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -170,6 +170,7 @@
     overflow-y: scroll;
   }
   .tableBody::-webkit-scrollbar {
+    display: none;
     width: 6px;
     background-color: #f2f8f8;
   }
