--- a/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
+++ b/src/modules/SecondPage/TransactionTableRow/TransactionTableRow.module.css
@@ -28,6 +28,7 @@
   border: none;
   background-color: transparent;
   padding: 0;
+  cursor: pointer;
 }
 
 /* ----------------MOBILE---------------- */
