--- a/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
+++ b/src/modules/SecondPage/TransactionForm/TransactionForm.module.css
@@ -5,14 +5,6 @@
   flex-direction: column;
   width: 100%;
 }
-.calendarIcon {
-  position: absolute;
-  z-index: 2;
-  left: -4px;
-  top: 12px;
-}
-
-
 
 .iconCalculator {
   height: 44px;
@@ -27,8 +19,6 @@
   border: 2px solid #fff;
   border-left: none;
 }
-
-
 
 .inputCountOverlay {
   display: flex;
@@ -82,12 +72,6 @@
   flex-direction: row-reverse;
 }
 
-.calendarIcon {
-  height: 17px;
-  width: 20px;
-  cursor: pointer;
-}
-
 .datePicker {
   font-weight: 900;
   font-size: 12px;
@@ -113,6 +97,26 @@
   left: 0;
   top: 0;
   cursor: pointer;
+}
+
+.dateButton {
+  background-color: transparent;
+  border: none;
+  position: relative;
+  padding: 20px 40px;
+  cursor: pointer;
+}
+.dateButtonText {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
+  color: #52555f;
+}
+.calendarIcon {
+  position: absolute;
+  z-index: 2;
+  left: 12px;
+  top: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -193,7 +197,7 @@
   }
   .iconCalculator {
     height: 44px;
-  
+
     display: block;
     border-radius: 0 16px 16px 0;
     margin-left: auto;
@@ -343,9 +347,6 @@
     flex-direction: row;
     width: auto;
   }
-  .calendarIcon {
-    left: -3px;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -442,9 +443,9 @@ btnClear:focus {
 }
 
 @media screen and (max-width: 767px) {
- .iconCalculator{
+  .iconCalculator {
     margin-top: 32px;
- }
+  }
 
   .wrap {
     margin-top: -20px;
@@ -470,14 +471,6 @@ btnClear:focus {
   .datePicker {
     font-size: 15px;
     font-weight: 700;
-  }
-
-  .calendarIcon {
-    width: 30px;
-    height: 30px;
-    margin: auto 0;
-    left: -24px;
-    top: 7px;
   }
 
   .description {
