--- a/src/modules/AuthForm/AuthForm.module.css
+++ b/src/modules/AuthForm/AuthForm.module.css
@@ -31,7 +31,7 @@
   background-color: #f6f7fb;
   border-radius: 30px;
   box-shadow: 1px 2px 3px 0px #aab2c533;
-  margin: 20px auto 30px;
+  margin: 16px auto 30px;
   padding: 10px 0;
 }
 
@@ -106,6 +106,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .googleImage__background {
+    margin-top: 32px;
+  }
   .form__title_first {
     width: 259px;
     font-size: 12px;
