--- a/src/modules/Summary/summary.module.css
+++ b/src/modules/Summary/summary.module.css
@@ -74,6 +74,10 @@
 }
 
 @media screen and (max-width: 771px) {
+  .expenses {
+    margin-left: 15px;
+  }
+
   .wrapper {
     background-color: white;
   }
