report page fix styles active category

--- a/src/modules/reports/components/ReportsList/ReportsList.module.css
+++ b/src/modules/reports/components/ReportsList/ReportsList.module.css
@@ -68,6 +68,9 @@
   .item {
     width: auto;
   }
+  .itemActive {
+    width: auto;
+  }
   .list {
     background-image: none;
     justify-content: center;
