fixed content overflow

--- a/src/modules/reports/components/ReportsItem/ReportsItem.module.css
+++ b/src/modules/reports/components/ReportsItem/ReportsItem.module.css
@@ -7,6 +7,8 @@
   width: 93px;
 
   text-decoration: none;
+
+  hyphens: auto;
 }
 .text {
   font-weight: 400;
@@ -18,6 +20,17 @@
   text-align: center;
 
   color: #52555f;
+
+  width: 93px;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.text:hover {
+  -ms-text-overflow: unset;
+  text-overflow: unset;
+  overflow: visible;
+  font-weight: bold;
 }
 .category {
   letter-spacing: 0.02em;
